--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -1,13 +1,13 @@
 .footer{
     background-color:$colorFooter;
-    ul{
+    nav{
         margin-bottom: 0;
-        li{
-            list-style: none;
-            img{
-                width: 38px;
+            li{
+                list-style: none;
+                img{
+                    width: 38px;
+                }
+            
             }
         }
     }
-    
-}
