--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -2,6 +2,9 @@
     background-color:$colorFooter;
     nav{
         margin-bottom: 0;
+        ul{
+            margin-bottom: 0;
+        }
             li{
                 list-style: none;
                 img{
