--- a/assets/scss/_animaciones.scss
+++ b/assets/scss/_animaciones.scss
@@ -4,10 +4,10 @@
 .img1:hover{
     transform: scale(1.1);
 }
-.card.grow{
-    transition: all .1s ease-in-out;
+.img1.grow {
+    transition: all 0.1s ease-in-out;
 }
-.card:hover{
+
+.img1:hover {
     transform: scale(1.1);
-    padding: 1px;
 }
