trabaje en el footer

--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -1,7 +1,7 @@
 .footer{
     background-color:$colorFooter;
     nav{
-        margin-bottom: 0;
+        margin-bottom: 0%;
         ul{
             margin-bottom: 0;
         }
