--- a/assets/scss/_extend.scss
+++ b/assets/scss/_extend.scss
@@ -3,9 +3,9 @@
     margin-bottom: 20px;
     background-color: whitesmoke;
     .cardUbi1 img{
-        border-radius: 5px;
+        border-radius: 10px;
         .cardUbi1 h4{
-            margin: top 20px;
+            margin-top: 20px;
             .cardUbi1 p{
                 margin-top: 20px;
             }
