--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -3,6 +3,7 @@
     nav{
         margin-bottom: 0%;
         ul{
+            padding-left: 0;
             margin-bottom: 0;
         }
             li{
