--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -15,3 +15,28 @@
             }
         }
     }
+
+.footerNews{
+    background-color:$colorFooter;
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+    nav{
+        margin-bottom: 0%;
+        ul{
+            padding-left: 0;
+            margin-bottom: 0;
+        }
+            li{
+                list-style: none;
+                img{
+                    width: 38px;
+                }
+            
+            }
+        }
+    }
+
+.footerUbi{
+    @extend .footerNews
+}
