--- a/assets/scss/_extend.scss
+++ b/assets/scss/_extend.scss
@@ -1,5 +1,6 @@
 .cardUbi1{
-    margin-top: 20px;
+    font-size: 19px;
+    margin-top: 25px;
     margin-bottom: 20px;
     background-color: whitesmoke;
     .cardUbi1 img{
