--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -29,8 +29,9 @@
     display: flex;
     flex-direction: row;
     img{
-        width: 30%;
-        padding: 5px;
+        width: 340px;
+        padding: 2px;
+        margin: 2px;
         }
     }
 .imgExh{
