--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -18,7 +18,7 @@
 
 .footerNews{
     background-color:$colorFooter;
-    position: fixed;
+    position:relative;
     width: 100%;
     bottom: 0;
     nav{
@@ -36,7 +36,3 @@
             }
         }
     }
-
-.footerUbi{
-    @extend .footerNews
-}
