--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,19 +41,12 @@
   width: 38px;
 }
 
-.img1.grow {
-  transition: all 1s ease-in-out;
-}
-
 .img1:hover {
-  transform: scale(1.2);
+  transform: scale(1.1);
+  transition: 1s;
 }
 
-.img1.grow {
-  transition: all 1s ease-in-out;
-}
-
-.img1:hover {
+.img2:hover {
   transform: scale(1.1);
 }
 
@@ -275,6 +268,7 @@
   width: 400px;
   padding: 2px;
   margin: 2px;
+  border-radius: 5px;
 }
 
 .imgExh {
