--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -39,6 +39,7 @@
         width: 400px;
         padding: 2px;
         margin: 2px;
+        border-radius: 5px;
         }
     }
 .imgExh{
@@ -72,9 +73,3 @@
         font-family: 'Barlow', sans-serif;
     }
 }
-
-
-
-
-
-
